Added basic settup
dropped terms of SP20 and WI20

--- a/DataCheckpoint_group046.ipynb
+++ b/DataCheckpoint_group046.ipynb
@@ -13,11 +13,11 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Sharon Chen\n",
+    "- Pamela Ghag\n",
+    "- Yuzi Chu\n",
+    "- Cheng Chang\n",
+    "- Stanley Hahm"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "Are there significant differences among courses under the Humanities, Social Sciences, and STEM departments at UCSD in terms of the correlation between course difficulty and teachers’ ratings on student-feedback platforms (e.g. CAPES, RateMyProfessor)?"
    ]
   },
   {
@@ -71,7 +71,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "## YOUR CODE HERE\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Configure libraries\n",
+    "# The seaborn library makes plots look nicer\n",
+    "sns.set(context = 'talk', style='white')\n",
+    "\n",
+    "# Don't display too many rows/cols of DataFrames\n",
+    "pd.options.display.max_rows = 7\n",
+    "pd.options.display.max_columns = 8\n",
+    "\n",
+    "# Round decimals when displaying DataFrames\n",
+    "pd.set_option('precision', 2)\n",
+    "\n",
+    "# Make plots just slightly bigger for displaying well in notebook\n",
+    "# set plotting size parameter\n",
+    "plt.rcParams['figure.figsize'] = (10, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert pd\n",
+    "assert np\n",
+    "assert sns\n",
+    "assert plt"
    ]
   },
   {
@@ -90,12 +121,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/dcao/seascape/master/data/data.csv\")\n",
+    "#drop evaluation made for term WI20 and SP20\n",
+    "df = df.drop(df[(df.term =='WI20') | (df.term =='SP20')].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(48645, 10)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>enrolled</th>\n",
+       "      <th>evals</th>\n",
+       "      <th>recClass</th>\n",
+       "      <th>recInstr</th>\n",
+       "      <th>hours</th>\n",
+       "      <th>gpaExp</th>\n",
+       "      <th>gpaAvg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>48645.00</td>\n",
+       "      <td>48645.00</td>\n",
+       "      <td>48645.00</td>\n",
+       "      <td>48645.00</td>\n",
+       "      <td>48645.00</td>\n",
+       "      <td>47295.00</td>\n",
+       "      <td>34282.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>76.62</td>\n",
+       "      <td>39.25</td>\n",
+       "      <td>88.73</td>\n",
+       "      <td>88.99</td>\n",
+       "      <td>5.61</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>3.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>86.22</td>\n",
+       "      <td>47.60</td>\n",
+       "      <td>12.63</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>40.00</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>92.00</td>\n",
+       "      <td>94.00</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>103.00</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>6.93</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>3.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1064.00</td>\n",
+       "      <td>509.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>20.50</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       enrolled     evals  recClass  recInstr     hours    gpaExp    gpaAvg\n",
+       "count  48645.00  48645.00  48645.00  48645.00  48645.00  47295.00  34282.00\n",
+       "mean      76.62     39.25     88.73     88.99      5.61      3.52      3.23\n",
+       "std       86.22     47.60     12.63     14.63      2.58      0.32      0.40\n",
+       "...         ...       ...       ...       ...       ...       ...       ...\n",
+       "50%       40.00     20.00     92.00     94.00      5.30      3.50      3.22\n",
+       "75%      103.00     50.00    100.00    100.00      6.93      3.75      3.52\n",
+       "max     1064.00    509.00    100.00    100.00     20.50      4.00      4.00\n",
+       "\n",
+       "[8 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
    ]
   },
   {
@@ -137,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
