--- a/DataCheckpoint_group046.ipynb
+++ b/DataCheckpoint_group046.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "\n",
     "# Make plots just slightly bigger for displaying well in notebook\n",
     "# set plotting size parameter\n",
-    "plt.rcParams['figure.figsize'] = (10, 5)"
+    "#plt.rcParams['figure.figsize'] = (10, 5)"
    ]
   },
   {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -220,38 +220,131 @@
        "      <td>4.00</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51276</th>\n",
+       "      <td>Li, Huai</td>\n",
+       "      <td>VIS 105D</td>\n",
+       "      <td>SU07</td>\n",
+       "      <td>17</td>\n",
+       "      <td>13</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51277</th>\n",
+       "      <td>Guerrero, Raul M.</td>\n",
+       "      <td>VIS 106A</td>\n",
+       "      <td>SU07</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>7.21</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51278</th>\n",
+       "      <td>Mangolte, Babette</td>\n",
+       "      <td>VIS 194S</td>\n",
+       "      <td>SU07</td>\n",
+       "      <td>80</td>\n",
+       "      <td>57</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4.27</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51279</th>\n",
+       "      <td>Holland, Nicole Murphy</td>\n",
+       "      <td>VIS 22</td>\n",
+       "      <td>SU07</td>\n",
+       "      <td>40</td>\n",
+       "      <td>33</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51280</th>\n",
+       "      <td>Michaelis, Danielle Ruth</td>\n",
+       "      <td>VIS 60</td>\n",
+       "      <td>SU07</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>13.28</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>48645 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         instr    course  term  enrolled  evals  recClass  \\\n",
-       "0    Butler, Elizabeth Annette    AAS 10  FA20        65     29      89.0   \n",
-       "1  Puritty, Chandler Elizabeth   AAS 190  FA20        19      5     100.0   \n",
-       "2      Andrews, Abigail Leslie  AIP 197T  FA20        34     11     100.0   \n",
-       "3    Jones, Ian William Nasser  ANAR 120  FA20        15      4     100.0   \n",
-       "4           Smith, Neil Gordon  ANAR 121  FA20        17      6     100.0   \n",
+       "                             instr    course  term  enrolled  evals  recClass  \\\n",
+       "0        Butler, Elizabeth Annette    AAS 10  FA20        65     29      89.0   \n",
+       "1      Puritty, Chandler Elizabeth   AAS 190  FA20        19      5     100.0   \n",
+       "2          Andrews, Abigail Leslie  AIP 197T  FA20        34     11     100.0   \n",
+       "3        Jones, Ian William Nasser  ANAR 120  FA20        15      4     100.0   \n",
+       "4               Smith, Neil Gordon  ANAR 121  FA20        17      6     100.0   \n",
+       "...                            ...       ...   ...       ...    ...       ...   \n",
+       "51276                     Li, Huai  VIS 105D  SU07        17     13     100.0   \n",
+       "51277            Guerrero, Raul M.  VIS 106A  SU07        16     14      92.0   \n",
+       "51278            Mangolte, Babette  VIS 194S  SU07        80     57      74.0   \n",
+       "51279       Holland, Nicole Murphy    VIS 22  SU07        40     33     100.0   \n",
+       "51280     Michaelis, Danielle Ruth    VIS 60  SU07        19     18     100.0   \n",
        "\n",
-       "   recInstr  hours  gpaExp  gpaAvg  \n",
-       "0      96.0   4.50    3.77    3.33  \n",
-       "1     100.0   2.10    4.00     NaN  \n",
-       "2     100.0   4.06    3.67     NaN  \n",
-       "3     100.0   2.50    3.50     NaN  \n",
-       "4     100.0   6.50    4.00     NaN  "
+       "       recInstr  hours  gpaExp  gpaAvg  \n",
+       "0          96.0   4.50    3.77    3.33  \n",
+       "1         100.0   2.10    4.00     NaN  \n",
+       "2         100.0   4.06    3.67     NaN  \n",
+       "3         100.0   2.50    3.50     NaN  \n",
+       "4         100.0   6.50    4.00     NaN  \n",
+       "...         ...    ...     ...     ...  \n",
+       "51276     100.0   2.33    4.00     NaN  \n",
+       "51277      92.0   7.21    3.79     NaN  \n",
+       "51278      26.0   4.27    3.21     NaN  \n",
+       "51279      96.0   4.32    3.62     NaN  \n",
+       "51280      94.0  13.28    3.59     NaN  \n",
+       "\n",
+       "[48645 rows x 10 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +353,7 @@
        "(48645, 10)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,14 +429,24 @@
        "      <td>0.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>20.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>83.00</td>\n",
+       "      <td>84.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>2.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -377,7 +480,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -385,15 +487,14 @@
        "count  48645.00  48645.00  48645.00  48645.00  48645.00  47295.00  34282.00\n",
        "mean      76.62     39.25     88.73     88.99      5.61      3.52      3.23\n",
        "std       86.22     47.60     12.63     14.63      2.58      0.32      0.40\n",
-       "...         ...       ...       ...       ...       ...       ...       ...\n",
+       "min        1.00      3.00      0.00      0.00      0.00      1.33      1.21\n",
+       "25%       20.00     10.00     83.00     84.00      4.00      3.30      2.93\n",
        "50%       40.00     20.00     92.00     94.00      5.30      3.50      3.22\n",
        "75%      103.00     50.00    100.00    100.00      6.93      3.75      3.52\n",
-       "max     1064.00    509.00    100.00    100.00     20.50      4.00      4.00\n",
-       "\n",
-       "[8 rows x 7 columns]"
+       "max     1064.00    509.00    100.00    100.00     20.50      4.00      4.00"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
