Reset index after data cleaning

--- a/DataCheckpoint_group046.ipynb
+++ b/DataCheckpoint_group046.ipynb
@@ -610,7 +610,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "      <td>3.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>1</th>\n",
        "      <td>I_758</td>\n",
        "      <td>ANAR 146</td>\n",
        "      <td>FA20</td>\n",
@@ -674,7 +674,7 @@
        "      <td>3.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>2</th>\n",
        "      <td>I_1099</td>\n",
        "      <td>ANBI 118</td>\n",
        "      <td>FA20</td>\n",
@@ -687,7 +687,7 @@
        "      <td>3.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>3</th>\n",
        "      <td>I_3175</td>\n",
        "      <td>ANBI 136</td>\n",
        "      <td>FA20</td>\n",
@@ -700,7 +700,7 @@
        "      <td>2.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>4</th>\n",
        "      <td>I_1137</td>\n",
        "      <td>ANBI 141</td>\n",
        "      <td>FA20</td>\n",
@@ -719,17 +719,17 @@
       "text/plain": [
        "    instr    course  term  enrolled  eval  rec_class  rec_instr  hours  \\\n",
        "0   I_457    AAS 10  FA20        65    29       89.0       96.0   4.50   \n",
-       "5   I_758  ANAR 146  FA20        41    16      100.0      100.0   4.00   \n",
-       "6  I_1099  ANBI 118  FA20        20    15       93.0      100.0   2.77   \n",
-       "8  I_3175  ANBI 136  FA20        22    15       66.0       73.0   5.17   \n",
-       "9  I_1137  ANBI 141  FA20       117    53      100.0      100.0   3.75   \n",
+       "1   I_758  ANAR 146  FA20        41    16      100.0      100.0   4.00   \n",
+       "2  I_1099  ANBI 118  FA20        20    15       93.0      100.0   2.77   \n",
+       "3  I_3175  ANBI 136  FA20        22    15       66.0       73.0   5.17   \n",
+       "4  I_1137  ANBI 141  FA20       117    53      100.0      100.0   3.75   \n",
        "\n",
        "   gpa_exp  gpa_rec  \n",
        "0     3.77     3.33  \n",
-       "5     3.81     3.79  \n",
-       "6     3.67     3.77  \n",
-       "8     3.27     2.99  \n",
-       "9     3.70     3.87  "
+       "1     3.81     3.79  \n",
+       "2     3.67     3.77  \n",
+       "3     3.27     2.99  \n",
+       "4     3.70     3.87  "
       ]
      },
      "execution_count": 7,
@@ -751,6 +751,9 @@
     "\n",
     "# Switch instructor names to IDs\n",
     "cape[\"instr\"] = cape[\"instr\"].apply(lambda name: instr_id_map[name])\n",
+    "\n",
+    "# Reset DataFrame index\n",
+    "cape = cape.reset_index(drop=True)\n",
     "\n",
     "cape.head()"
    ]
