--- a/EDACheckpoint_group046.ipynb
+++ b/EDACheckpoint_group046.ipynb
@@ -1166,6 +1166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figure above shows the correlation between the average gpa received by the students in STEM classes up against the percentage of those students who recommended that specific instructor who taught the STEM class. The figure shows a wide range when it comes to how many students recommended the instructor. The majority of instructors received over 20% recommendation rating. Also, the majority of the students received at least a 2.0 gpa or above.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1214,6 +1221,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at our OLS regression results for STEM classes we can see our best guess of what the intercept (our y intercept, beta 0) between our gpa received and instructor recommendation would be 51.28, and the standard error is 1.095, which indicates the majority of the data we have is clustered around our mean. Therefore, this indicates our coefficient intercept of 51.28 is very close to our true value. If we look at our gpa received coefficient (beta 1, slope of the line) it suggests that as the gpa received increases the recommendation value for the instructor increases by 10.62. Also, if you look at the standard error around the coefficient it is at 0.351, which means the error is very small. Therefore, it shows this data’s mean is a very close, accurate reflection of the population mean.   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1234,6 +1248,13 @@
    "source": [
     "# Check the correlation between gpa_rec and rec_instr for social science classes\n",
     "sns.lmplot(x='gpa_rec', y='rec_instr', data=cape_social_sci, fit_reg=False, height = 5, aspect = 4);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figure above shows the correlation between the average gpa received by the students in social science classes up against the percentage of those students who recommended that specific instructor who taught the social science class. It shows that the majority of instructors received approximately 60% or above recommendation value. Therefore, over half the students who took their class would recommend them to other students. Also, the majority of the students received on average at least a 2.5 gpa or above. If we compare these numbers to the STEM figure that shows that instructors received over 20% recommendation rate, this highlights social sciences have a higher recommendation rate but similar gpa received by the students."
    ]
   },
   {
@@ -1285,6 +1306,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above is our OLS regression results, it shows the best guess for our gpa received and instructor recommendation for social science classes is 59.5526, with a standard error of 1.087. If we compare these to the STEM regression results mentioned previously, we can see a slight increase for the (y) intercept. If we look at our gpa received coefficient (beta 1, slope of the line) it suggests that as the gpa received increases the recommendation value for the instructor increases by 9.06. This figure is slightly smaller than the STEM figure of 10.62.  The standard error for our gpa received is at 0.334, which is also very small. Therefore, this too shows that this set of data’s mean is a very close, and accurate reflection of the population mean.    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -1305,6 +1333,13 @@
    "source": [
     "# Check the correlation between gpa_rec and rec_instr for humanities classes\n",
     "sns.lmplot(x='gpa_rec', y='rec_instr', data=cape_hum, fit_reg = False, height = 5, aspect = 4);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figure above shows the correlation between the average gpa received by the students in humanity classes up against the percentage of those students who recommended that specific instructor who taught the humanity class. This figure shows that the majority of instructors received approximately 55% or above recommendation value. The majority of the students who took these classes received on average a 2.5 or above. Therefore, in comparison to social science classes, recommendation of instructors and gpa received is very similar. This can be seen in these figures as the patterns are almost identical. However, compared to STEM, humanities instructors have a higher recommendation rate. "
    ]
   },
   {
@@ -1354,6 +1389,20 @@
     "\n",
     "print(results3.summary())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The OLS regression results for humanity classes shows our best guess y intercept is at 57.3633 for our variables: gpa received and instructor recommendation. It shows the gapa received coefficient is 9.3271 which is nearly identical to social sciences classes with a coefficient of 9.06. It also has a similar standard error at 0.395 for humanity classes whereas for social sciences it is at 0.334. With it being so small means our data indicates that it is a very accurate reflection of the population. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1372,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
