added marked down cell
according to the description contributed by sharon

--- a/EDACheckpoint_group046.ipynb
+++ b/EDACheckpoint_group046.ipynb
@@ -1162,6 +1162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above scattermatrix, we see that the histogram for gpa_rec-- (a variable that is pertinent to our research question through its representation of course difficulty)-- follows an approximately normal distribution. This indicates that the majority of data points are relatively similar, in that they occur within a small range of values, with few outliers on the high and low ends (i.e. there were neither abnormally high average GPAs nor abnormally low ones). On the other hand, the histogram for rec_instr-- (a variable that is pertinent to our research question through its representation of students' perceptions of professors)-- is heavily skewed left, possibly indicating that students were more likely to give higher teacher recommendations as opposed to lower. This idea is further shown in the scatterplot depicting the relationship between gpa_rec (on the x-axis) and rec_instr (on the y-axis), whereby a larger density of points can be found situated in the topmost (higher) side of the plot, indicating typically higher recommendation values for a range of class GPAs. We will explore this relationship further to gain a more nuanced analysis of exactly how strong (or weak) this relationship between class GPA and teacher recommendation percentages is for STEM classes in comparison to those within the Social Science and Humanities departments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1183,6 +1190,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above scattermatrix, we see that the histogram for gpa_rec-- (a variable that is pertinent to our research question through its representation of course difficulty)-- follows an approximately normal distribution. This indicates that the majority of data points are relatively similar, in that they occur within a small range of values, with few outliers on the high and low ends (i.e. there were neither abnormally high average GPAs nor abnormally low ones). On the other hand, the histogram for rec_instr-- (a variable that is pertinent to our research question through its representation of students' perceptions of professors)-- is heavily skewed left, possibly indicating that students were more likely to give higher teacher recommendations as opposed to lower. This idea is further shown in the scatterplot depicting the relationship between gpa_rec (on the x-axis) and rec_instr (on the y-axis), whereby a larger density of points can be found situated in the topmost (higher) side of the plot, indicating typically higher recommendation values for a range of class GPAs. Upon first comparison with the corresponding scatterplot for STEM classes, we can get a sense that the range of professor recommendation percentages given by students in Social Science courses are more clustered towards the higher end of the recommendation percentage scale; (the datapoints of the scatterplot for STEM classes were more varied on the y-axis). Taking this into account, we will explore how this may affect the relationship between class GPA and teacher recommendation percentages for Social Science classes and compare our results to those within the STEM and Humanities departments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1201,6 +1215,13 @@
    "source": [
     "# generate a scatter matrix of humanities professors\n",
     "fig3 = pd.plotting.scatter_matrix(cape_hum[['gpa_exp','gpa_rec','rec_instr','rec_class']], figsize=(20, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above scattermatrix, we see that the histogram for gpa_rec-- (a variable that is pertinent to our research question through its representation of course difficulty)-- is slightly skewed to the left. This indicates that unlike the distributions of average GPA for STEM and Social Science courses, students in Humanities courses tend to report a higher average GPA. Similarly, the histogram for rec_instr-- (a variable that is pertinent to our research question through its representation of students' perceptions of professors)-- is heavily skewed left, possibly indicating that students were more likely to give higher teacher recommendations as opposed to lower (as seemed to also be the case with the histograms corresponding to the STEM and Social Science departments). This idea is further shown in the scatterplot depicting the relationship between gpa_rec (on the x-axis) and rec_instr (on the y-axis), whereby a larger density of points can be found situated in the topmost (higher) side of the plot, indicating typically higher recommendation values for a range of class GPAs. Similar to the case with Social Science courses, in comparing this scatterplot with the corresponding scatterplot for STEM classes, we can get a sense that the range of instructor recommendation percentages for those taking Humanities courses are more clustered towards the higher end of the recommendation percentage scale. Taking this into account, we will explore how this may affect the relationship between class GPA and teacher recommendation percentages for Humanities classes and compare our results to those within the STEM and Social Science departments."
    ]
   },
   {
@@ -1248,7 +1269,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.060\n",
       "Method:                 Least Squares   F-statistic:                     914.5\n",
       "Date:                Wed, 24 Feb 2021   Prob (F-statistic):          8.11e-195\n",
-      "Time:                        12:40:40   Log-Likelihood:                -60614.\n",
+      "Time:                        15:23:47   Log-Likelihood:                -60614.\n",
       "No. Observations:               14378   AIC:                         1.212e+05\n",
       "Df Residuals:                   14376   BIC:                         1.212e+05\n",
       "Df Model:                           1                                         \n",
@@ -1331,7 +1352,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.071\n",
       "Method:                 Least Squares   F-statistic:                     736.8\n",
       "Date:                Wed, 24 Feb 2021   Prob (F-statistic):          2.26e-156\n",
-      "Time:                        12:40:40   Log-Likelihood:                -37226.\n",
+      "Time:                        15:23:48   Log-Likelihood:                -37226.\n",
       "No. Observations:                9582   AIC:                         7.446e+04\n",
       "Df Residuals:                    9580   BIC:                         7.447e+04\n",
       "Df Model:                           1                                         \n",
@@ -1414,7 +1435,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.058\n",
       "Method:                 Least Squares   F-statistic:                     557.1\n",
       "Date:                Wed, 24 Feb 2021   Prob (F-statistic):          1.46e-119\n",
-      "Time:                        12:40:40   Log-Likelihood:                -36335.\n",
+      "Time:                        15:23:48   Log-Likelihood:                -36335.\n",
       "No. Observations:                8978   AIC:                         7.267e+04\n",
       "Df Residuals:                    8976   BIC:                         7.269e+04\n",
       "Df Model:                           1                                         \n",
